--- a/.env
+++ b/.env
@@ -1,13 +1,7 @@
-# DB_USERNAME="root"
-# DB_PASSWORD="root"
-# DB_NAME="clean_architecture"
-# DB_HOST="localhost"
-# DB_PORT="3306"
-# JWT_SECRET_KEY="reallysecret"
-DB_USERNAME="rnxhltq62a158oqo"
-DB_PASSWORD="ztb6xh01r07xjk5h"
-DB_NAME="xfp8izavwhly283e"
-DB_HOST="cwe1u6tjijexv3r6.cbetxkdyhwsb.us-east-1.rds.amazonaws.com"
+DB_USERNAME="root"
+DB_PASSWORD="root"
+DB_NAME="clean_architecture"
+DB_HOST="localhost"
 DB_PORT="3306"
 JWT_SECRET_KEY="reallysecret"
-# DB_TEST_NAME="clean_architecture_test"
+DB_TEST_NAME="clean_architecture_test"
